force-app/main/default/objects/Request__c/fields/Created_by_current_user__c.field-meta.xml
<CustomField>
    <fullName>Created_by_current_user__c</fullName>
    <formula>if (CreatedById = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by current user</label>
    <type>Checkbox</type>
</CustomField>