force-app/main/default/objects/Request__c/fields/Get_existing_contracts__c.field-meta.xml
<CustomField>
    <fullName>Get_existing_contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get existing contracts</label>
    <type>Checkbox</type>
</CustomField>