force-app/main/default/objects/Request__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Huff - Historical - Credit</fullName>
            </value>
            <value>
                <fullName>Custom pricing requests</fullName>
            </value>
            <value>
                <fullName>Future pricing requests</fullName>
            </value>
            <value>
                <fullName>Other requests</fullName>
            </value>
            <value>
                <fullName>Renewal extension</fullName>
            </value>
            <value>
                <fullName>Historical usage request</fullName>
                <isActive>false</isActive>
                <label>Historical usage request</label>
            </value>
            <value>
                <fullName>Huff Data</fullName>
                <isActive>false</isActive>
                <label>Huff Data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>