force-app/main/default/objects/Request__c/listViews/My_requests.listView-meta.xml
<ListView>
    <fullName>My_requests</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Subtype__c</columns>
    <columns>Subject__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Open requests</label>
</ListView>